# duoroute

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  embedding.yaml  flagship.yaml  model_cards.yaml  small_subset.yaml
data_pack/: README.md
docs/: DATA_DOWNLOAD.md  DATA_MANIFEST.md  PROJECT_STRUCTURE.md  REGRETROUTER_REPRODUCTION.md  UPLOAD_NOTES.md
llmbenchmark/: README.md
llmbenchmark/config/: baseline_config_mmlupro_only.yaml  baseline_config_small_subset.yaml  spo_experiment.yaml  spo_paper_experiment.yaml
scripts/: benchmark_r_dfl_ap.py  benchmark_regretrouter.py  build_comparison_tables.py  build_embeddings.py  build_final_paper_table.py  build_rewards.py  calibrate_fallback.py  compress_embeddings.py  compress_meta.py  compute_cascade_value_metrics.py  decompress_embeddings.py  download_data.sh  eval_duoroute.py  eval_unified_baselines.py  export_main_tables.py  package_data.sh  run_avengerspro_cached.py  run_flagship_embeddings.sh  run_leave_one_model_out.py  run_llmbench_aligned_eval.py  run_llmrouterbench_flagship.py  run_mechanism_ablations.py  run_multiseed_main_tables.py  setup.sh  train_duoroute.py
scripts/archive/: README.md
src/duoroute/: __init__.py  behavioral_signature.py  bench_loader.py  bench_metrics.py  build_data.py  build_embeddings.py  calibration.py  data.py  embedding_io.py  encoders.py  evaluator.py  experiment_log.py  flip_metrics.py  inference.py  losses.py  main_table.py  metrics.py  model.py  model_cards.py  pool_data.py  privileged_pipeline.py  prompt_ids.py  r_dfl_ap.py  rdf_cascade_decomp.py  rdf_cascade_dfl.py  rdf_expert_router.py  rdf_query_model_selector.py  rdf_router.py  rdf_vg_cascade.py  regretrouter.py  train.py  (+8 more)
tests/: test_duoroute.py
