[project]
name = "regretrouter"
version = "1.0.0"
description = "RegretRouter: K=3 recursive decision-focused LLM routing with cascade recourse"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
  "loguru>=0.7",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "sentence-transformers>=2.7.0",
  "transformers>=4.51.0",
  "accelerate>=0.30.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.7.0", "transformers>=4.51.0", "accelerate>=0.30.0"]

[project.scripts]
regretrouter-build-data = "duoroute.build_data:main"
regretrouter-build-embeddings = "duoroute.build_embeddings:main"
regretrouter-train = "duoroute.train:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
